libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/use-tuple-literal.jsonc
//@ run: fail
//@ description: any value that isn't an identifier should fail
[
  "::kernel::special_form::use",
  "::math",
  { "#tuple": [{ "#literal": 1 }] },
  //~^ ERROR garble barble
  "x"
]
